k8s/auction-events-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auction-events-service
spec:
  selector:
    app: auction-events
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
