k8s/auction-payments-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auction-payments-service
spec:
  selector:
    app: auction-payments
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
