k8s/auction-timers-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auction-timers-service
spec:
  selector:
    app: auction-timers
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
